# Starless

./: CMakeLists.txt  GameManager.cpp  GameManager.h  README.md  main.cpp
MainMenu/: MainMenu.cpp  MainMenu.h
Utils/: Logging.cpp  Logging.h
